# ood

lab01/SimUDuck.1/: CMakeLists.txt  SimUDuck.cpp
lab01/SimUDuck.2/: CMakeLists.txt  SimUDuck.cpp
lab01/SimUDuck.3/: CMakeLists.txt  SimUDuck.cpp
lab02/WeatherStation.1/: CMakeLists.txt  WeatherData.h
lab02/WeatherStation.2/: CMakeLists.txt  Observer.h  tests.cpp
lab02/WeatherStation.3/: CMakeLists.txt  Observer.h  tests.cpp
lab02/WeatherStation.4/: CMakeLists.txt  Observer.h  WeatherData.h  main.cpp  tests.cpp
lab02/WeatherStation.5/: CMakeLists.txt  WeatherData.h  WeatherStation.vcxproj
lab02/WeatherStation.6/: CMakeLists.txt  WeatherData.h  WeatherStation.vcxproj.filters
lab02/WeatherStation.7/: CMakeLists.txt  Observer.h  WeatherData.h  main.cpp
lab02/WeatherStation.8/: CMakeLists.txt  Observer.h  WeatherData.h  main.cpp
lab03/coffee.1/: Beverages.h  CMakeLists.txt  Condiments.h  IBeverage.h  coffee.vcxproj  coffee.vcxproj.filters  main.cpp
lab03/streams.3/: CMakeLists.txt  compress-decorator.cpp  compress-decorator.hpp  crypt-decorator.cpp  crypt-decorator.hpp  data-stream.hpp  file-stream.hpp  main.cpp  memory-stream.hpp  stream-decorator.hpp  streams.vcxproj
lab03/streams.3/tests/: CMakeLists.txt  compress.cpp  crypt.cpp  stream-tester.cpp  stream-tester.hpp  streams.cpp
lab04/: CMakeLists.txt
lab04/libpainter/: CDesigner.cpp  CDesigner.hpp  CEllipse.cpp  CEllipse.hpp  CMakeLists.txt  CPainter.hpp  CPictureDraft.hpp  CRectangle.cpp  CRectangle.hpp  CRegularPolygon.cpp  CRegularPolygon.hpp  CShape.hpp  CShapeFactory.cpp  CShapeFactory.hpp  CTriangle.cpp  CTriangle.hpp  Color.cpp  Color.hpp  ICanvas.hpp  IDesigner.hpp  IShapeFactory.hpp  Point.hpp
lab04/libpainter-tests/: CMakeLists.txt  designer.cpp  ellipse.cpp  logging-canvas.hpp  painter.cpp  picture-draft.cpp  point.hpp  rectangle.cpp  regular-polygon.cpp  shape-factory.cpp  shape.cpp  shape.hpp  text-shape-factory.hpp  text-shape.hpp  triangle.cpp
lab04/painter/: CClient.hpp  CMakeLists.txt  CSvgCanvas.cpp  CSvgCanvas.hpp  main.cpp
lab05/editor.1/: CArguments.hpp  CConstDocumentItem.hpp  CDocument.cpp  CDocument.hpp  CDocumentItem.hpp  CDocumentMenu.cpp  CDocumentMenu.hpp  CHistory.hpp  CImage.cpp  CImage.hpp  CMakeLists.txt  CMenu.cpp  CMenu.hpp  CParagraph.cpp  CParagraph.hpp  CSetCommand.hpp  CSize.hpp  CVectorCommand.hpp  ICommand.hpp  IDocument.hpp  IImage.hpp  IParagraph.hpp  main.cpp
lab05/editor.1/tests/: CArguments.cpp  CConstDocumentItem.cpp  CDocument.cpp  CDocumentItem.cpp  CDocumentMenu.cpp  CHistory.cpp  CMakeLists.txt  CMenu.cpp  CParagraph.cpp  CSetCommand.cpp  CSize.cpp  CVectorCommand.cpp  command.hpp  logging-document.hpp  null-items.hpp
lab06/adapter.2/: main.cpp  (+4 more)
lab08/GumballMachine.4/tests/: CMakeLists.txt  CSoldState.cpp  FakeGumballMachine.hpp  GumBallMachine.hpp  GumBallMachineWithDynamicallyCreatedState.cpp  NaiveGumBallMachine.cpp  State.cpp
lab09/painter.2/: CMakeLists.txt
lab09/painter.2/src/: CMakeLists.txt  PainterApplication.cpp  PainterApplication.hpp  PainterWindow.cpp  PainterWindow.hpp  main.cpp
lab09/painter.2/src/canvas/: BoundsMovementState.hpp  CairoCanvas.cpp  CairoCanvas.hpp  CanonicalShape.cpp  CanonicalShape.hpp  CanvasPainter.cpp  CanvasPainter.hpp  CanvasPresenter.cpp  CanvasPresenter.hpp  CanvasWidget.cpp  CanvasWidget.hpp  ICanvas.hpp  ICanvasPresenterItem.cpp  ICanvasPresenterItem.hpp  Rectangle.cpp  SelectionFrame.cpp  SelectionFrame.hpp  Triangle.cpp  Triangle.hpp
lab09/painter.2/src/canvas-view/: BoundsMovementState.cpp  BoundsMovementState.hpp  CanvasHitTester.cpp  CanvasHitTester.hpp  CanvasPresenter.cpp  CanvasPresenter.hpp  CanvasWidget.cpp  CanvasWidget.hpp  SelectionFrame.cpp  SelectionFrame.hpp
lab09/painter.2/src/drawing/: BoundsMovement.hpp  Drawing.cpp  Drawing.hpp  IDrawingItem.hpp  IDrawingItemVisitor.hpp  RectangularShape.cpp  RectangularShape.hpp  shapes.hpp  types.hpp
lab09/painter.2/src/history/: History.cpp  History.hpp  ICommand.hpp  IHistory.hpp  ListCommand.hpp  SetCommand.hpp
lab09/painter.2/src/model/: CanonicalShape.cpp  CanonicalShape.hpp  Drawing.cpp  Drawing.hpp  Ellipse.cpp  Ellipse.hpp  ICanvas.hpp  IDrawable.hpp  IDrawingItem.hpp  Rectangle.hpp  RectangularShape.cpp  RectangularShape.hpp  types.hpp
(+65 files in other folders)
